<resources>
    <string name="app_name">RecuperacionUF1M08_MohamedRedaALAKIL</string>
    <string name="accept_conditions_and_terms">accept_conditions_and_terms</string>
    <string name="repeat_password">repeat_password</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="sign_up">sign_up</string>
    <string name="login">login</string>
    <string name="create_a_new_user">create_a_new_user</string>
    <string name="save_username_and_password">save_username_and_password</string>
</resources>